--- a/petljadoc/themes/course_theme/globaltoc.html
+++ b/petljadoc/themes/course_theme/globaltoc.html
@@ -10,7 +10,7 @@
                     <i class="fas fa-angle-up caret-position d-none"></i>
                 </div>
                 <div class="courseContentsSubSection d-none">
-                    {%- for activity in lesson.active_activies -%}
+                    {%- for activity in lesson.active_activities -%}
                     {%- if pagename == 'index' -%}
                         <a href=./{{lesson.folder_url}}/{{activity.toc_url}}.html>
                     {%- else -%}
