--- a/petljadoc/themes/bc_theme/layout.html
+++ b/petljadoc/themes/bc_theme/layout.html
@@ -11,8 +11,12 @@
 {%- block linktags %}{% endblock %}
 
 {% if pagename == 'index' %}
-{% set css_files = ['platform/style.css'] %}
-{% set script_files = ['platform/bundle.js'] %}
+{% set css_files = ['_static/style-player.css',
+                    '_static/fonts/bootstrap-icons.woff',
+                    '_static/fonts/bootstrap-icons.woff2'
+                    ]
+%}
+{% set script_files = ['_static/bundle.js'] %}
 {% else %}
 {% set script_files = ['_static'+'/petlja.js',
                        '_static/runestonebase.js',
