--- a/petljadoc/scorm-proxy-templates/index.t.html
+++ b/petljadoc/scorm-proxy-templates/index.t.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div id="course-content" class="course-content">
-      <iframe id="main-iframe" class="content-iframe"></iframe>
+      <iframe id="main-iframe" class="content-iframe" data-content-url="{{data_content_url}}"></iframe>
     </div>
   </div>
 <script defer src="bundle.js"></script>
