new layout some bug fixes

--- a/petljadoc/themes/bc_theme/layout.html
+++ b/petljadoc/themes/bc_theme/layout.html
@@ -126,7 +126,7 @@
     </div>
   </div>
   <div id="course-content" class="course-content">
-    <iframe id="main-iframe" class="content-iframe"></iframe>
+    <iframe id="main-iframe" class="content-iframe" data-content-url="."></iframe>
   </div>
 </div>
 
