--- a/petljadoc/scorm-proxy-templates/index.t.html
+++ b/petljadoc/scorm-proxy-templates/index.t.html
@@ -1,4 +1,7 @@
-<head><link rel="icon" href="favicon.ico"><link href="style-player.css" rel="stylesheet"></head><div id="player-header" class="player-header">
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+<link rel="icon" href="favicon.ico"><link href="style-player.css" rel="stylesheet"></head>
+<div id="player-header" class="player-header">
   <div id="toc-toggle" class="content-toggle">
     <i class="bi bi-list-task"></i>
     <p id="content-text">Content</p>
