--- a/petljadoc/scorm-proxy-templates/index.t.html
+++ b/petljadoc/scorm-proxy-templates/index.t.html
@@ -4,7 +4,7 @@
 <div id="player-header" class="player-header">
   <div id="toc-toggle" class="content-toggle">
     <i class="bi bi-list-task"></i>
-    <p id="content-text">Content</p>
+    <p id="content-text">Садржај</p>
   </div>
   <div class="content-title">
     <div id="course-title" class="course-title"></div>
@@ -13,7 +13,7 @@
   <div>
     <div id="font-size" class="content-options">
       <i class="bi bi-fonts"></i>
-      <span id="font-text" class="no-select"> Font </span>
+      <span id="font-text" class="no-select"> Фонт </span>
     </div>
     <div id="font-size-modal" class="font-picker hide-element">
       <button class="no-select" id="smaller-text">-</button>
