--- a/petljadoc/themes/runestone_theme/layout.html
+++ b/petljadoc/themes/runestone_theme/layout.html
@@ -32,7 +32,7 @@
 <!DOCTYPE html>
 {%- endblock %}
 {%- block lang -%}
-<html xmlns="http://www.w3.org/1999/xhtml" lang="{{lang}}"></html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{language}}"></html>
 {%- endblock %}
 {%- block htmltitle %}
 <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
