same acitivty name bug fix

--- a/petljadoc/themes/course_theme/globaltoc.html
+++ b/petljadoc/themes/course_theme/globaltoc.html
@@ -16,7 +16,7 @@
                     {%- else -%}
                         <a href=../{{lesson.folder_url}}/{{activity.toc_url}}.html>
                     {%- endif -%}
-                    <div class="studioLecture" id=activity-{{activity.toc_url}}>
+                    <div class="studioLecture" id=activity-{{lesson.folder_url}}-{{activity.toc_url}}>
                         {%- if "reading" == activity.type -%}
                         <i class="fas fa-file-alt activity-icon"></i>
                         {%- elif "video" == activity.type -%}
